# gfcpp

./: CMakeLists.txt  LICENSE.txt  README.md  Rationales.md  errors.hpp  result.hpp  run.sh
cmake/: Toolchain-amd64.cmake  common.cmake
docs/: Rationales.md  TODO.md
gfc/: errors.hpp  result.hpp
gfcpp/: Result.hpp  result.hpp
gfcpp/v0/: Maybe.hpp  errors.hpp  result.hpp
test/: MaybeTest.cpp  ResultTest.cpp  main.cpp
